--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "next": "16.0.6",
+    "date-fns": "^4.1.0",
+    "next": "16.0.8",
     "next-auth": "^5.0.0-beta.25",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "19.2.1",
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.6",
+    "eslint-config-next": "16.0.8",
     "prisma": "^7.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
